# fate-tables

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
fate-tables/: conf.py  index.rst
fate-tables/fate-core/: index.md
