[tool.poetry]
name = "Fate tables"
version = "0.0.1"
description = "Fate system in tables"
authors = ["Radosław Ganczarek <radoslaw@ganczarek.in>"]
license = "CC-BY, Open Game License"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^3.5.3"
myst-parser = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
